--delete map ++autoupdate ++optimizate